force-app/main/default/objects/copadovsm__Value_Stream_Map_Snapshot__c/copadovsm__Value_Stream_Map_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Value Stream Map Snapshot</label>
    <nameField>
        <displayFormat>SN-{0000000000}</displayFormat>
        <label>Value Stream Map Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Value Stream Map Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>