force-app/main/default/objects/copadovsm__Value_Stream_Map_Snapshot__c/fields/copadovsm__DataJson__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__DataJson__c</fullName>
    <label>DataJson</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>