force-app/main/default/objects/copadovsm__Value_Stream_Map_Snapshot__c/fields/copadovsm__Filter__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__Filter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Filter</label>
    <referenceTo>copadovsm__Filter__c</referenceTo>
    <relationshipLabel>Value Stream Map Snapshots</relationshipLabel>
    <relationshipName>Value_Stream_Map_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>