force-app/main/default/objects/copadovsm__Value_Stream_Map_Snapshot__c/fields/copadovsm__Snapshot_Execution_Time__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__Snapshot_Execution_Time__c</fullName>
    <label>Snapshot Execution Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>